fix: passing around file metadata
