# pkg/docs/swagger.json
@@ -226,7 +226,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/types.IngestResponse"
                         }
                     }
                 }
@@ -289,6 +289,17 @@
                     "type": "string",
                     "format": "hostname_rfc1123",
                     "example": "asst-12345"
+                }
+            }
+        },
+        "types.IngestResponse": {
+            "type": "object",
+            "properties": {
+                "documents": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
